# fwocr

./: Cargo.toml  README.org
src/: main.rs
